--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind Test</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="dist/output.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Hello World</h1>
-    </div>
+    <h1 class="text-3xl font-bold underline bg-blue-800">
+        Hello world!
+      </h1>
 </body>
 </html>
