--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind Test</title>
-    <link rel="stylesheet" href="dist/output.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="dist/output.css" />
 </head>
 <body>
-    <h1 class="text-3xl font-bold underline bg-blue-800">
-        Hello world!
-      </h1>
+  i install then i watch ur ss 1 sec
 </body>
 </html>
