Add page content in index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="dist/output.css" />
-</head>
-<body>
-  i install then i watch ur ss 1 sec
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="dist/output.css" />
+	</head>
+	<body>
+		<div
+			class="flex min-h-screen items-center justify-center bg-gradient-to-r from-purple-950 to-indigo-700"
+		>
+			<div class="flex items-center justify-center border-[1px] border-gray-800 bg-gray-800/[.50] rounded-lg drop-shadow-lg">
+				<div class="text-white font-mono text-[100px] px-52 py-20">00:00:00</div>
+			</div>
+		</div>
+	</body>
 </html>
